sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:7: error: ';' expected but 'for' found.
    \for (i <- 0 to getValueCount()-2-done)
     ^